Fix paid reaction overlap

--- a/src/scss/partials/_reaction.scss
+++ b/src/scss/partials/_reaction.scss
@@ -171,7 +171,7 @@
       --background-color: rgba(255, 188, 46, .2) !important;
       color: #E98111;
       transition: transform .2s ease-in-out;
-      z-index: 1;
+      z-index: 2;
 
       .currency-star-icon {
         transform: translateX(1px);
